k8s/audit-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: franklin-site-status-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: franklin-site-status-audit-worker
  template:
    metadata:
      labels:
        app: franklin-site-status-audit-worker
    spec:
      containers:
        - name: audit-worker
          image: franklin-site-status-audit-worker:latest
          resources:
            requests:
              cpu: "1"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
