k8s/egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: ns-team-sites-xp-space-cat
spec:
  podSelector: {}
  egress:
    - {}
  policyTypes:
    - Egress
